--- a/website/app/[locale]/(root)/roadmap/content.mdx
+++ b/website/app/[locale]/(root)/roadmap/content.mdx
@@ -111,12 +111,8 @@ Redesign the homepage according to the features of v2.
 
         - **Master CSS v2.0**
             - Release Candidate － December 2023
-            - Stable － February 2024
-        - **Master UI v1.0**
-            - Alpha － April 2024
-            - Beta － May 2024
-            - Release Candidate － June 2024
-            - Stable － August 2024
+            - Stable － April 2024
+        - **Master UI v1.0** － August 2024
         - **Master UI Pro v1.0** － December 2024
     </div>
 </details>
