Update classNames in code linting and layout components

--- a/website/app/[locale]/(root)/docs/code-linting/content.mdx
+++ b/website/app/[locale]/(root)/docs/code-linting/content.mdx
@@ -1,7 +1,7 @@
 import { IconStatusChange, IconSettingsExclamation, IconArrowMerge, IconShieldCheck, IconPencilExclamation, IconFunction } from '@tabler/icons-react'
 import Features, { Feature } from 'websites/components/Features'
 
-<Features className="grid-cols:3@sm my:50">
+<Features className="grid-cols:3@sm my:12x">
     <Feature>
         <IconStatusChange className="app-icon-primary" />
         <div>
