--- a/website/app/[locale]/(root)/docs/code-linting/svelte/content.mdx
+++ b/website/app/[locale]/(root)/docs/code-linting/svelte/content.mdx
@@ -1,4 +1,4 @@
-<StepSection className="mt:50">
+<StepSection className="mt:12x">
     <Step $row>
         <StepL>
             ### <StepNum />Installation
@@ -37,7 +37,7 @@
         </StepL>
         <StepR>
             ```json name=.vscode/settings.json
-            { 
+            {
                 "eslint.validate": [
                     "javascript",
                     "javascriptreact",
