--- a/website/app/[locale]/(root)/docs/code-linting/vscode/content.mdx
+++ b/website/app/[locale]/(root)/docs/code-linting/vscode/content.mdx
@@ -1,6 +1,6 @@
 import VSCodeSvg from '~/public/icons/visualstudiocode.svg?inlineSvg'
 
-<StepSection className="mt:50">
+<StepSection className="mt:12x">
     <Step $row>
         <StepL>
             ### <StepNum />Install ESLint extension
