--- a/website/app/[locale]/(root)/docs/colors/content.mdx
+++ b/website/app/[locale]/(root)/docs/colors/content.mdx
@@ -93,7 +93,7 @@ export default {
 ```
 Use [background-color](/docs/background-color) syntax to set the app background color:
 ```html
-<body class="**bg:neutral**">…</body>
+<body class="**bg:base**">…</body>
 ```
 | Token             | Description                                                                                                                       |
 |-------------------|-----------------------------------------------------------------------------------------------------------------------------------|
