--- a/website/app/[locale]/(root)/docs/installation/(tabs)/cdn/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/(tabs)/cdn/content.mdx
@@ -1,11 +1,11 @@
 Copy and paste [CDNs](/docs/installation#cdns) to instantly launch the [runtime engine](/docs/rendering-modes/runtime-rendering) in your browser out of the box.
 
-<StepSection className="mt:50">
+<StepSection className="mt:12x">
     <Step>
         ### <StepNum />Start in one step
         Copy and paste to start styling your first element with Master CSS!
         <CDNCodes />
-        <p className="mt:50">Open your browser to watch the changes.</p>
+        <p className="mt:12x">Open your browser to watch the changes.</p>
         <HelloWorld />
     </Step>
 </StepSection>
