--- a/website/app/[locale]/(root)/docs/installation/(tabs)/general/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/(tabs)/general/content.mdx
@@ -55,7 +55,7 @@ The easiest way to use Master CSS from scratch is to initialize the [runtime eng
         </body>
         </html>
         ```
-        <p className="mt:50">Open your browser to watch the changes.</p>
+        <p className="mt:12x">Open your browser to watch the changes.</p>
         <HelloWorld />
     </Step>
 </StepSection>
