--- a/website/app/[locale]/(root)/docs/installation/blazor/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/blazor/content.mdx
@@ -128,7 +128,7 @@ import RuntimeRenderingIntro from '../../rendering-modes/components/RuntimeRende
             …
             +   import { initRuntime } from '@master/css';
             +   import config from 'master.css';
-            
+
             +   initRuntime(config)
             ```
         </StepR>
@@ -254,7 +254,7 @@ import RuntimeRenderingIntro from '../../rendering-modes/components/RuntimeRende
                 }
             ]}
         </CodeTabs>
-        <p className="mt:50">Open your browser to watch the changes.</p>
+        <p className="mt:12x">Open your browser to watch the changes.</p>
         <HelloWorld url="localhost:3000" />
     </Step>
 </StepSection>
