--- a/website/app/[locale]/(root)/docs/installation/esm-sh/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/esm-sh/content.mdx
@@ -1,6 +1,6 @@
 import RuntimeRenderingIntro from '../../rendering-modes/components/RuntimeRenderingIntro.mdx'
 
-<RuntimeRenderingIntro className="mb:50" />
+<RuntimeRenderingIntro className="mb:12x" />
 
 <StepSection>
     <Step>
@@ -29,7 +29,7 @@ import RuntimeRenderingIntro from '../../rendering-modes/components/RuntimeRende
         </body>
         </html>
         ```
-        <p className="mt:50">Open your browser to watch the changes.</p>
+        <p className="mt:12x">Open your browser to watch the changes.</p>
         <HelloWorld url="index.html" />
     </Step>
 </StepSection>
