--- a/website/app/[locale]/(root)/docs/installation/nextjs/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/nextjs/content.mdx
@@ -232,7 +232,7 @@ import ProgressiveRenderingIntro from '../../rendering-modes/components/Progress
             )
         }
         ```
-        <p className="mt:50">Open your browser to watch the changes.</p>
+        <p className="mt:12x">Open your browser to watch the changes.</p>
         <HelloWorld url="localhost:3000" />
     </Step>
 </StepSection>
