--- a/website/app/[locale]/(root)/docs/installation/nextjs/static-extraction/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/nextjs/static-extraction/content.mdx
@@ -165,7 +165,7 @@ import StaticExtractionIntro from '../../../rendering-modes/components/StaticExt
             )
         }
         ```
-        <p className="mt:50">Open your browser to watch the changes.</p>
+        <p className="mt:12x">Open your browser to watch the changes.</p>
         <HelloWorld url="localhost:3000" />
     </Step>
 </StepSection>
