--- a/website/app/[locale]/(root)/docs/installation/vite/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/vite/content.mdx
@@ -129,7 +129,7 @@ import RuntimeRenderingIntro from '../../rendering-modes/components/RuntimeRende
             </body>
         </html>
         ```
-        <p className="mt:50">Open your browser to watch the changes.</p>
+        <p className="mt:12x">Open your browser to watch the changes.</p>
         <HelloWorld url="localhost:5173" />
     </Step>
 </StepSection>
