--- a/website/app/[locale]/(root)/docs/rendering-modes/components/StaticExtractionIntro.mdx
+++ b/website/app/[locale]/(root)/docs/rendering-modes/components/StaticExtractionIntro.mdx
@@ -4,7 +4,7 @@ import Features, { Feature } from 'websites/components/Features'
 import { l } from 'to-line'
 
 Master CSS [Static Extraction](/docs/rendering-modes/static-extraction) integrates build tools to **scan** project source code, **extract** class names, **generate** CSS rules, and write them into a **virtual CSS module**.
-<div className="flex flex:wrap@<sm gap:50 mt:50">
+<div className="flex flex:wrap@<sm gap:50 mt:12x">
     <Features className={l(props.img ? 'w:35%@sm' : 'grid-cols:3@sm')}>
         <Feature>
             <IconFileExport className="app-icon-primary" />
