--- a/website/app/[locale]/(root)/docs/code-linting/html/content.mdx
+++ b/website/app/[locale]/(root)/docs/code-linting/html/content.mdx
@@ -1,4 +1,4 @@
-<StepSection className="mt:50">
+<StepSection className="mt:12x">
     <Step $row>
         <StepL>
             ### <StepNum />Installation
