--- a/website/app/[locale]/(root)/docs/installation/angular/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/angular/content.mdx
@@ -144,7 +144,7 @@ import ProgressiveRenderingIntro from '../../rendering-modes/components/Progress
         ```html name=src/app/app.component.html
         <h1 class="**font:40** **font:heavy** **italic** **m:50** **text:center**">Hello World</h1>
         ```
-        <p className="mt:50">Open your browser to watch the changes.</p>
+        <p className="mt:12x">Open your browser to watch the changes.</p>
         <HelloWorld url="localhost:3000" />
     </Step>
 </StepSection>
