--- a/website/app/[locale]/(root)/docs/installation/astro/static-extraction/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/astro/static-extraction/content.mdx
@@ -131,7 +131,7 @@ import StaticExtractionIntro from '../../../rendering-modes/components/StaticExt
             </main>
         </Layout>
         ```
-        <p className="mt:50">Open your browser to watch the changes.</p>
+        <p className="mt:12x">Open your browser to watch the changes.</p>
         <HelloWorld url="localhost:3000" />
     </Step>
 </StepSection>
