--- a/website/app/[locale]/(root)/docs/installation/laravel/static-extraction/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/laravel/static-extraction/content.mdx
@@ -171,13 +171,13 @@ import StaticExtractionIntro from '../../../rendering-modes/components/StaticExt
         ```html name=resources/views/layouts/welcome.blade.php
         …
         <body>
-            <h1 class="**font:40** **font:heavy** **italic** **m:50** **text:center**"> 
-                Hello World 
+            <h1 class="**font:40** **font:heavy** **italic** **m:50** **text:center**">
+                Hello World
             </h1>
         </body>
         …
         ```
-        <p className="mt:50">Open your browser to watch the changes.</p>
+        <p className="mt:12x">Open your browser to watch the changes.</p>
         <HelloWorld url="127.0.0.1:8000" />
     </Step>
 </StepSection>
