--- a/website/app/[locale]/(root)/docs/installation/nextjs/runtime-rendering/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/nextjs/runtime-rendering/content.mdx
@@ -166,7 +166,7 @@ import RuntimeRenderingIntro from '../../../rendering-modes/components/RuntimeRe
             )
         }
         ```
-        <p className="mt:50">Open your browser to watch the changes.</p>
+        <p className="mt:12x">Open your browser to watch the changes.</p>
         <HelloWorld url="localhost:3000" />
     </Step>
 </StepSection>
