--- a/website/app/[locale]/(root)/docs/installation/nuxtjs/runtime-rendering/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/nuxtjs/runtime-rendering/content.mdx
@@ -129,7 +129,7 @@ import RuntimeRenderingIntro from '../../../rendering-modes/components/RuntimeRe
             <h1 class="**font:40** **font:heavy** **italic** **m:50** **text:center**">Hello World</h1>
         </template>
         ```
-        <p className="mt:50">Open your browser to watch the changes.</p>
+        <p className="mt:12x">Open your browser to watch the changes.</p>
         <HelloWorld url="localhost:3000" />
     </Step>
 </StepSection>
