--- a/website/app/[locale]/(root)/docs/installation/react/static-extraction/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/react/static-extraction/content.mdx
@@ -122,7 +122,7 @@ import StaticExtractionIntro from '../../../rendering-modes/components/StaticExt
             )
         }
         ```
-        <p className="mt:50">Open your browser to watch the changes.</p>
+        <p className="mt:12x">Open your browser to watch the changes.</p>
         <HelloWorld url="localhost:5173" />
     </Step>
 </StepSection>
