--- a/website/app/[locale]/(root)/docs/installation/svelte/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/svelte/content.mdx
@@ -160,7 +160,7 @@ import ProgressiveRenderingIntro from '../../rendering-modes/components/Progress
         ```svelte name=src/routes/%2Bpage.svelte
         +<h1 class="font:40 fg:blue font:heavy italic m:50 text:center">Hello World</h1>
         ```
-        <p className="mt:50">Open your browser to watch the changes.</p>
+        <p className="mt:12x">Open your browser to watch the changes.</p>
         <HelloWorld url="localhost:5173" />
     </Step>
 </StepSection>
