--- a/website/app/[locale]/(root)/docs/installation/svelte/runtime-rendering/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/svelte/runtime-rendering/content.mdx
@@ -142,7 +142,7 @@ import RuntimeRenderingIntro from '../../../rendering-modes/components/RuntimeRe
         ```svelte name=src/routes/%2Bpage.svelte
         +<h1 class="font:40 fg:blue font:heavy italic m:50 text:center">Hello World</h1>
         ```
-        <p className="mt:50">Open your browser to watch the changes.</p>
+        <p className="mt:12x">Open your browser to watch the changes.</p>
         <HelloWorld url="localhost:5173" />
     </Step>
 </StepSection>
