--- a/website/app/[locale]/(root)/docs/installation/svelte/static-extraction/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/svelte/static-extraction/content.mdx
@@ -122,7 +122,7 @@ import StaticExtractionIntro from '../../../rendering-modes/components/StaticExt
         ```svelte name=src/routes/%2Bpage.svelte
         +<h1 class="font:40 fg:blue font:heavy italic m:50 text:center">Hello World</h1>
         ```
-        <p className="mt:50">Open your browser to watch the changes.</p>
+        <p className="mt:12x">Open your browser to watch the changes.</p>
         <HelloWorld url="localhost:5173" />
     </Step>
 </StepSection>
