--- a/website/app/[locale]/(root)/docs/language-service/vscode/content.mdx
+++ b/website/app/[locale]/(root)/docs/language-service/vscode/content.mdx
@@ -4,7 +4,7 @@ The official Master CSS Language Service for Visual Studio Code extension.
 
 ## Installation [sr-only]
 
-<StepSection className="mt:50">
+<StepSection className="mt:12x">
     <Step $row>
         <StepL>
             ### <StepNum />Installation
